多列柱状图及梯形自定义View实现

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,13 @@
             </intent-filter>
 
         </activity>
+
+        <activity
+            android:name=".overlayavator.activity.OverlayAvatarActivity"
+            android:exported="true" />
+        <activity
+            android:name=".barchart.BarChartActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
